fixed gap distances

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -16,7 +16,7 @@ body {
   display: flex;
   flex-direction: column;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  padding-top: 7rem;
+  padding-top: 11.75rem;
 
   > header {
     background: white;
@@ -126,7 +126,6 @@ body {
       align-items: center;
       display: flex;
       justify-content: space-between;
-      max-height: 7rem;
       padding: 2rem 1rem;
 
       h1 {
@@ -180,6 +179,8 @@ body {
   }
 
   @media (max-width: 635px) {
+    padding-top: 7rem;
+
     &.hide-overflow {
       overflow: hidden;
     }
@@ -371,14 +372,14 @@ nav {
       > a {
         color: $eerieBlack;
         display: block;
-        padding: 0.6rem 1.2rem;
+        padding: 0.625rem 1.2rem;
 
         &:hover {
           color: $azure;
         }
 
         @media (max-width: 150px) {
-          padding: 0.6rem 0;
+          padding: 0.625rem 0;
         }
       }
 
